# OTGL

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.cache/clangd/index/: color.c.3DA5F13568CFE15B.idx  color.h.A72DF37DB39FD24B.idx  hello_world.c.74EA5763A84AC598.idx  loading.c.FFD23A1ACC7323C4.idx  video.c.4448BE4550B71097.idx  video.h.594699B601CC833E.idx
demo/: CMakeLists.txt  epilepsy.c  hello_world.c
include/OTGL/: color.h  video.h
lib/OTGL/: CMakeLists.txt  color.c  video.c
test/: CMakeLists.txt  video_test.c
